Modified the boot order to get proper wrapping.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.mouse.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.draggable.js"></script>
     
-    <script tpye="text/javascript" src="./panes.js"></script>
+    <script tpye="text/javascript" src="./init.js"></script>
+    <script tpye="text/javascript" src="./ui.js"></script>
+    <script type="text/javascript" src="./grid.js"></script>
 </head>
 
 <body>
