.js sources converted to CoffeeScript
Also, I __JUST__ figured out I can capture error messages from JS using
Chrome's inspect element thinger when I pop it out. Man I feel like a turd.

W/e. Lets get some ruby up in this joint.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.mouse.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.draggable.js"></script>
     
-    <script tpye="text/javascript" src="./src/js/ui.js"></script>
-    <script type="text/javascript" src="./src/js/grid.js"></script>
+    <script tpye="text/javascript" src="./build/ui.js"></script>
+    <script type="text/javascript" src="./build/grid.js"></script>
     <script tpye="text/javascript" src="./build/init.js"></script>
 </head>
 
