Turned build into coffee

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.mouse.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.draggable.js"></script>
     
-    <script tpye="text/javascript" src="./build/ui.js"></script>
-    <script type="text/javascript" src="./build/grid.js"></script>
-    <script tpye="text/javascript" src="./build/init.js"></script>
+    <script tpye="text/javascript" src="./coffee/ui.js"></script>
+    <script type="text/javascript" src="./coffee/grid.js"></script>
+    <script tpye="text/javascript" src="./coffee/init.js"></script>
 </head>
 
 <body>
