Interesting behavior found. No idea why click events are firing.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,16 @@
             </ul>
     </div>
 
-    <div id="timer_pane_container"><div id="timer_pane" class="movable_pane">
-        The number of alive cells is <span id="cell_count">0</span>
-    </div></div>
+    <!-- <div id="timer_pane_container"><div id="timer_pane" class="movable_pane">
+        <span>You should see this.</span>
+        <span>&nbsp;</span>
+        <span>&nbsp;</span>
+    </div></div> -->
+    <div id="timer_pane" class="movable_pane">
+        <span>You should see this.</span>
+        <span>&nbsp;</span><br />
+        <span>&nbsp;</span><br />
+        <span>&nbsp;</span><br />
+    </div>
 </body>
 
