it's official. We have a working Game of life.

--- a/index.html
+++ b/index.html
@@ -36,16 +36,8 @@
             </ul>
     </div>
 
-    <!-- <div id="timer_pane_container"><div id="timer_pane" class="movable_pane">
-        <span>You should see this.</span>
-        <span>&nbsp;</span>
-        <span>&nbsp;</span>
-    </div></div> -->
     <div id="timer_pane" class="movable_pane">
-        <span>You should see this.</span>
-        <span>&nbsp;</span><br />
-        <span>&nbsp;</span><br />
-        <span>&nbsp;</span><br />
+        <a class="button_set"><span id="step" class="button">Step</span></a>
     </div>
 </body>
 
