In prep for restructuring, we're now joining .coffees

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <script type="text/javascript" src="./lib/ui/jquery.ui.mouse.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.draggable.js"></script>
     
-    <script tpye="text/javascript" src="./coffee/ui.js"></script>
-    <script type="text/javascript" src="./coffee/grid.js"></script>
-    <script tpye="text/javascript" src="./coffee/init.js"></script>
+    <script tpye="text/javascript" src="./coffee/GoL.coffee.js"></script>
 </head>
 
 <body>
