Added debugger div

--- a/index.html
+++ b/index.html
@@ -37,5 +37,12 @@
     <div id="timer_pane" class="movable_pane">
         <a class="button_set"><span id="step" class="button">Step</span></a>
     </div>
+
+    <div id="debug_pane" class="movable_pane">
+        <p>px Offset: <span>&nbsp;</span></p>
+        <p>drawn Offset: <span>&nbsp;</span></p>
+        <p><span>&nbsp;</span></p>
+        <p><span>&nbsp;</span></p>
+    </div>
 </body>
 
