Adding underscore.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <script type="text/javascript" src="./lib/raphael.js"></script>
     <script type="text/javascript" src="./lib/jquery-1.7.js"></script>
+    <script type="text/javascript" src="./lib/underscore.js"></script>
 
     <script type="text/javascript" src="./lib/ui/jquery.ui.core.js"></script>
     <script type="text/javascript" src="./lib/ui/jquery.ui.widget.js"></script>
