Added a note about the debugging pane

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
     <div id="debug_pane" class="movable_pane">
         <p>px Offset: <span>&nbsp;</span></p>
-        <p>drawn Offset: <span>&nbsp;</span></p>
-        <p><span>&nbsp;</span></p>
-        <p><span>&nbsp;</span></p>
+        <p><span></span></p>
+        <p><span></span></p>
+        <p><span></span></p>
     </div>
 </body>
 
