--- a/index.html
+++ b/index.html
@@ -2,26 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>a Game of Life.js</title>
+    <title>myGame of Life -- a CoffeeScript, CSS3, and HTML5 experiment</title>
+    <meta name="description" content="A simple implementation of Conway's Game of Life using CoffeeScript, CSS3 and HTML5." />
 
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./main.css" />
-
-    <script src="./lib/raphael.js"></script>
-    <script src="./lib/jquery-1.7.js"></script>
-    <script src="./lib/underscore.js"></script>
-
-    <script src="./lib/ui/jquery.ui.core.js"></script>
-    <script src="./lib/ui/jquery.ui.widget.js"></script>
-    <script src="./lib/ui/jquery.ui.mouse.js"></script>
-    <script src="./lib/ui/jquery.ui.draggable.js"></script>
-    
-    <script src="./coffee/GoL.coffee.js"></script>
 </head>
 
 <body>
+    <!--This is the element subsumed by Raphael, on which all of the
+        vector images are to be drawn. It maybe should be a canvas. -->
     <div id="draw_space"></div>
 
+    <!--The Help Pane here is where the basics are explained.
+        TODO: I think the next step is going to be to tab-ify this so
+              I can include a 'what,' 'why,' and 'how' paragraph. -->
     <div id="help_pane" class="movable_pane">
         <header id="title_text"><sub>my</sub>Game of Life</header>
         <p>This is my crack at a JavaScript-backed implementation of John Conway's ageless <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Game of Life.</a></p>
@@ -41,15 +36,35 @@
         <p>It should be noted that the grid I've implemented is (theoretically) infinite, so any gliders you loose will just keep on going. This shouldn't be a problematic memory leak (assuming you don't stock up on Glider Guns) as the underlying model only tracks live cells. This does, however, suggest a rather inefficient implementation---it is a web-app, after all---so don't expect anything extraordinary.</p>
     </div>
 
+    <!--This should be renamed to `control_pane` as it's where all the
+        cool CSS buttons and sliders are going to be.
+        TODO: Figure out if CSS or JQuery Sliders are the better
+              choice. I'm guessing it'll be JQuery, as x-browser is 
+              always an issue. Damnit IE6... -->
     <div id="timer_pane" class="movable_pane">
-        <span class="button_set"><span id="step" class="button">Step</span></a>
+        <div class="button_set"><span id="step" class="button">Step</span></div>
     </div>
 
+    <!--TEMPORARY DEBUG PANE
+        As soon as the scripts are solid, this should go away. -->
     <div id="debug_pane" class="movable_pane">
         <p>px Offset: <span>&nbsp;</span></p>
         <p><span></span></p>
         <p><span></span></p>
         <p><span></span></p>
     </div>
+
+    <!--And then there was JavaScript. And CoffeeScript too, but it
+        was already compiled, so whatever. -->
+    <script src="./lib/raphael.js"></script>
+    <script src="./lib/jquery-1.7.js"></script>
+    <script src="./lib/underscore.js"></script>
+
+    <script src="./lib/ui/jquery.ui.core.js"></script>
+    <script src="./lib/ui/jquery.ui.widget.js"></script>
+    <script src="./lib/ui/jquery.ui.mouse.js"></script>
+    <script src="./lib/ui/jquery.ui.draggable.js"></script>
+    
+    <script src="./coffee/GoL.coffee.js"></script>
 </body>
 
