More spans for debugging.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
     <p><span></span></p>
     <p><span></span></p>
     <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
+    <p><span></span></p>
   </div>
 
   <!--And then there was JavaScript. And CoffeeScript too, but it
