Added sass into the workflow
coffee.watchr now watches ./sass/*.scss and converts them to ./css/*.css.
Created those two folders for storing css and scss files, and pointed index
at ./css/*

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>myGame of Life -- a CoffeeScript, CSS3, and HTML5 experiment</title>
   <meta name="description" content="A simple implementation of Conway's Game of Life using CoffeeScript, CSS3 and HTML5." />
 
-  <link rel="stylesheet" href="./reset.css" />
-  <link rel="stylesheet" href="./main.css" />
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./lib/themes/jquery.ui.all.css" />
 </head>
 
