--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1><sub>my</sub>Game of Life</h1>
       <div id="tab_what" class="tab_content">
         <p>This is my crack at a JavaScript-backed implementation of John Conway's ageless <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Game of Life.</a></p>
-        <ul>The rules---as much for my benefit as yours---are as follows: Every generation
+        <ul>The rules--as much for my benefit as yours--are as follows:<br />For every generation
           <li>Any live cell with fewer than two live neighbors dies</li>
           <li>Any live cell with more than three live neighbors dies</li>
           <li>Any live cell with two or three live neighbors survives</li>
@@ -29,30 +29,32 @@
         </ul>
         &nbsp;
         <ul>The modes of interaction with this board are as follows:
-          <li>Left-click any empty cell to make it alive</li>
-          <li>Left-click any live cell to kill it off</li>
-          <li>Left-click and drag anywhere on the board to move the view frustum</li>
-          <li>TODO: Right-click movement. Mouse-wheel zooming.</li> 
+          <li>Left-click any empty cell to 'raise' it--to make it alive</li>
+          <li>Left-click any live cell to kill it</li>
+          <li>Left-click and drag to either batch raise or batch kill cells</li>
+          <li>Right-click and drag anywhere on the board to move the view frustum</li>
+        </ul>
+        <ul>TODOs:
+          <li>(Mouse-wheel?) zooming</li>
+          <li>Batch raise/killing</li>
         </ul>
       </div>
       <div id="tab_why" class="tab_content">
-        <p>I've put this whole thing for my own edification. It was an
-           experiment designed solely to glean a familiarity with
-           CoffeeScript (and, as a result, JavaScript), HTML5 and
-           CSS3. I wanted to do as much of the formatting---structure,
-           typography, visual flare---in HTML and CSS less so that I
-           can learn the old way of putting web pages together, but so
-           that I know what to look for in the "right" way.</p>
+        <p>My own edification, is the short answer. I've had, for a long time, a cursory understanding of HTML, CSS, and JavaScript, but I've never been deeply acquainted with them, nor had I before worked with HTML5 and CSS3 and the 'best practices' that come along with them. There's a trend in the industry that seems to be favoring using these technologies for new, adaptable, and clean user-interfaces, and I wanted to know why.</p>
+        <p>I must say, it is very easy to make broad changes in the structure of this interface with surprisingly few lines of code. It remains my (entirely correct) opinion that HTML is outmoded, the focus of CSS is backwards (too much specificity in all the wrong places), and JavaScript was designed by a committee in under a month. (okay, that last one's not an opinion; it's what actually happened. Pretty telling, though, yeah?) As such, the secondary focus of this experiment was to familiarize myself with CoffeeScript and Sass, so I might know what coding for the web in a sane environment could be like.</p>
       </div>
       <div id="tab_how" class="tab_content">
-        <p>Ahh fuck it. I'll add this content in when I have the structure fleshed out.</p>
-        <p>It should be noted that the grid I've implemented is (theoretically) infinite, so any gliders you loose will just keep on going. This shouldn't be a problematic memory leak (assuming you don't stock up on Glider Guns) as the underlying model only tracks live cells. This does, however, suggest a rather inefficient implementation---it is a web-app, after all---so don't expect anything extraordinary.</p>
+        <p>I did my best to follow web-coding "best practices." (I put "best practices" in quotations, not because I don't want my structure, style and code to be among the best out there, but because it's my experiences that these best practices are motivated by decades-old workaround, and petty squabbles.)
+        <p>I did my best to keep the markup of this page sane, but it doesn't much use `\<article\>`, `\<section\>`, or other such specific tags. This kind of UI doesn't lend itself to index searches or Readability to begin with, so I figured a few extra `\<div\>` tags wouldn't hurt much.</p>
+        <p>I wanted to do as much of the coloring, positioning, and user-interaction of textural elements in CSS as I could; I'm somewhat proud of the results. The slider is (unfortunately) JQuery because of some `mouseup` resolution oddities, as is the animation of the fading text. The rest is pure CSS. The hovering, selecting and transitioning of the buttons and tabs were put together in Sass (scss, specifically, because I love me some supersets) and compiled to pure CSS.</p>
+        <p>The Canvas was heavily inspired by the excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library from Xueqiao Xu. It uses a <a href="raphaeljs.com">Raphael.js</a> canvas for rendering simple vector graphics and <a href="jquery.com">JQuery</a> for properly capturing user input. The rest is a rather simple MCV program hashed together in <a href="coffeescript.org">CoffeeScript</a>.<p>
+        <p>Because I'm incredibly lazy, I had to put together a <a title="Find this link!">Watchr</a> script to automate compiling both the CoffeeScript down to JavaScript, and the Sass down to CSS.</p>
       </div>
     </div>
     <ul class="tab_menu">
-      <li><a href="#tab_what">W<br />h<br />a<br />t</a></li>
-      <li><a href="#tab_why">W<br />h<br />y</a></li>
-      <li><a href="#tab_how">H<br />o<br />w</a></li>
+      <li><a href="#tab_what">w<br />h<br />a<br />t</a></li>
+      <li><a href="#tab_why">w<br />h<br />y</a></li>
+      <li><a href="#tab_how">h<br />o<br />w</a></li>
     </ul>
   </div>
 
