--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!--The Help Pane here is where the basics are explained. -->
   <div id="help_pane" class="movable_pane">
     <div class="tab_container content_pane">
-      <h1><sub>my</sub>Game of Life</h1>
+      <header><sub>my</sub>Game of Life</header>
       <div id="tab_what" class="tab_content">
         <p>This is my crack at a JavaScript-backed implementation of John Conway's ageless <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Game of Life.</a></p>
         <ul>The rules--as much for my benefit as yours--are as follows:<br />For every generation
@@ -45,7 +45,7 @@
       </div>
       <div id="tab_how" class="tab_content">
         <p>I did my best to follow web-coding "best practices." (I put "best practices" in quotations, not because I don't want my structure, style and code to be among the best out there, but because it's my experiences that these best practices are motivated by decades-old workaround, and petty squabbles.)
-        <p>I did my best to keep the markup of this page sane, but it doesn't much use `\<article\>`, `\<section\>`, or other such specific tags. This kind of UI doesn't lend itself to index searches or Readability to begin with, so I figured a few extra `\<div\>` tags wouldn't hurt much.</p>
+        <p>I did my best to keep the markup of this page sane, but it doesn't much use `article`, `section`, or other such specific tags. This kind of UI doesn't lend itself to index searches or Readability to begin with, so I figured a few extra `div` tags wouldn't hurt much.</p>
         <p>I wanted to do as much of the coloring, positioning, and user-interaction of textural elements in CSS as I could; I'm somewhat proud of the results. The slider is (unfortunately) JQuery because of some `mouseup` resolution oddities, as is the animation of the fading text. The rest is pure CSS. The hovering, selecting and transitioning of the buttons and tabs were put together in Sass (scss, specifically, because I love me some supersets) and compiled to pure CSS.</p>
         <p>The Canvas was heavily inspired by the excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library from Xueqiao Xu. It uses a <a href="raphaeljs.com">Raphael.js</a> canvas for rendering simple vector graphics and <a href="jquery.com">JQuery</a> for properly capturing user input. The rest is a rather simple MCV program hashed together in <a href="coffeescript.org">CoffeeScript</a>.<p>
         <p>Because I'm incredibly lazy, I had to put together a <a title="Find this link!">Watchr</a> script to automate compiling both the CoffeeScript down to JavaScript, and the Sass down to CSS.</p>
@@ -92,6 +92,10 @@
     <p><span></span></p>
     <p><span></span></p>
   </div>
+
+  <footer>
+      Project Hosted on <a href="http://github.com/TheOnlyRew/myGame_of_Life">Github</a>
+  </footer>
 
   <!--And then there was JavaScript. And CoffeeScript too, but it
       was already compiled, so whatever. -->
