--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>myGame of Life -- a CoffeeScript, CSS3, and HTML5 experiment</title>
+  <title>myGame of Life -- a CoffeeScript, Sass, and HTML5 experiment</title>
   <meta name="description" content="A simple implementation of Conway's Game of Life using CoffeeScript, CSS3 and HTML5." />
 
-  <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="./css/main.css" />
-  <link rel="stylesheet" href="./lib/themes/jquery.ui.all.css" />
+  <link rel="stylesheet" href="./dev/css/reset.css" />
+  <link rel="stylesheet" href="./dev/css/main.css" />
+  <link rel="stylesheet" href="./dev/css/jquery-ui/jquery-ui-1.8.16.custom.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
       vector images are to be drawn. It maybe should be a canvas. -->
   <div id="draw_space"></div>
 
-  <!--The Help Pane here is where the basics are explained. -->
+  <!--The Help Pane. Where the basics are explained. -->
   <div id="help_pane" class="movable_pane">
     <div class="tab_container content_pane">
       <header><sub>my</sub>Game of Life</header>
@@ -58,11 +58,7 @@
     </ul>
   </div>
 
-  <!--This should be renamed to `control_pane` as it's where all the
-      cool CSS buttons and sliders are going to be.
-      TODO: Figure out if CSS or JQuery Sliders are the better
-            choice. I'm guessing it'll be JQuery, as x-browser is 
-            always an issue. Damnit IE6... -->
+  <!--The Control Pane. It's where all the cool buttons and sliders are. -->
   <div id="control_pane" class="movable_pane content_pane">
     <p><div class="button_set">
       <a id="step" class="button">Step</a>
@@ -77,7 +73,8 @@
 
   <!--TEMPORARY DEBUG PANE
       As soon as the scripts are solid, this should go away. -->
-  <div id="debug_pane" class="movable_pane">
+  <div id="debug_pane" class="movable_pane content_pane" oncontexmenu="return false">
+    Debug
     <p><span></span></p>
     <p><span></span></p>
     <p><span></span></p>
@@ -99,16 +96,11 @@
 
   <!--And then there was JavaScript. And CoffeeScript too, but it
       was already compiled, so whatever. -->
-  <script src="./lib/raphael.js"></script>
-  <script src="./lib/jquery-1.7.js"></script>
-  <script src="./lib/underscore.js"></script>
-
-  <script src="./lib/ui/jquery.ui.core.js"></script>
-  <script src="./lib/ui/jquery.ui.widget.js"></script>
-  <script src="./lib/ui/jquery.ui.mouse.js"></script>
-  <script src="./lib/ui/jquery.ui.draggable.js"></script>
-  <script src="./lib/ui/jquery.ui.slider.js"></script>
+  <script src="./min/lib/jquery-1.7.1.min.js"></script>
+  <script src="./min/lib/jquery-ui-1.8.16.custom.min.js"></script>
+  <script src="./min/lib/raphael-min.js"></script>  
+  <script src="./min/lib/underscore-min.js"></script>
   
-  <script src="./coffee/GoL.coffee.js"></script>
+  <script src="./dev/js/GoL.coffee.js"></script>
 </body>
 
