--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>myGame of Life -- a CoffeeScript, Sass, and HTML5 experiment</title>
+  <title>Game of Life.js&mdash;a CoffeeScript, Sass, and HTML5 experiment</title>
   <meta name="description" content="A simple implementation of Conway's Game of Life using CoffeeScript, CSS3 and HTML5." />
 
   <link rel="stylesheet" href="./dev/css/reset.css" />
@@ -19,50 +19,61 @@
   <div id="help_pane" class="movable_pane">
     <div class="tab_container content_pane">
       <header><sub>my</sub>Game of Life</header>
-      <div id="tab_what" class="tab_content">
-        <p>This is my crack at a JavaScript-backed implementation of John Conway's ageless <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Game of Life.</a></p>
-        <ul>The rules--as much for my benefit as yours--are as follows:<br />For every generation
+      <!--The Rules tab. -->
+      <div id="tab_rules" class="tab_content">
+        <p>John Conway's <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Game of Life.</a></p>
+        <ul>The rules are as follows:<br />For every generation
           <li>Any live cell with fewer than two live neighbors dies</li>
           <li>Any live cell with more than three live neighbors dies</li>
           <li>Any live cell with two or three live neighbors survives</li>
           <li>Any dead cell with exactly three live neighbors becomes alive</li>
         </ul>
-        &nbsp;
-        <ul>The modes of interaction with this board are as follows:
-          <li>Left-click any empty cell to 'raise' it--to make it alive</li>
+      </div>
+      <!--Controls tab. -->
+      <div id="tab_ctrls" class="tab_content">
+        <ul>The basic controls are:
+          <li>Left-click any empty cell to 'raise' it&ndash;to make it alive</li>
           <li>Left-click any live cell to kill it</li>
           <li>Left-click and drag to either batch raise or batch kill cells</li>
           <li>Right-click and drag anywhere on the board to move the view frustum</li>
+          <li>Hold both the Left and Right mouse buttons to zoom&ndash;up to zoom in, down to zoom out</li>
         </ul>
-        <ul>TODOs:
-          <li>(Mouse-wheel?) zooming</li>
-          <li>Batch raise/killing</li>
-        </ul>
+        <p>The control pane to the right will allow you to play/pause the simulation, take a single step to the next generation, set the speed of the simulation, and completely reset the board.</p>
+        <p>All visible panes are movable, and you can hide this help pane by clicking the <a>hide</a> anchor to the right of the title text.</p> 
       </div>
+      <!--The Why tab.
       <div id="tab_why" class="tab_content">
-        <p>My own edification, is the short answer. I've had, for a long time, a cursory understanding of HTML, CSS, and JavaScript, but I've never been deeply acquainted with them, nor had I before worked with HTML5 and CSS3 and the 'best practices' that come along with them. There's a trend in the industry that seems to be favoring using these technologies for new, adaptable, and clean user-interfaces, and I wanted to know why.</p>
-        <p>I must say, it is very easy to make broad changes in the structure of this interface with surprisingly few lines of code. It remains my (entirely correct) opinion that HTML is outmoded, the focus of CSS is backwards (too much specificity in all the wrong places), and JavaScript was designed by a committee in under a month. (okay, that last one's not an opinion; it's what actually happened. Pretty telling, though, yeah?) As such, the secondary focus of this experiment was to familiarize myself with CoffeeScript and Sass, so I might know what coding for the web in a sane environment could be like.</p>
-      </div>
+        <p>The short answer; my own edification.</p>
+        <p>I've had, for a long time, a cursory understanding of HTML, CSS, and JavaScript, but I've never been deeply acquainted with any of them, nor had I before worked with HTML5 and CSS3 and the 'best practices' that come along with them. I decided that should change.</P>
+        <p>I'm hopings this is a good enough website to be used as a resume piece, so if you notices anything odd, or have any suggestions, please contact me through the github link at the bottom of the page.</p>
+      </div> -->
+      <!--The Credits tab. -->
       <div id="tab_how" class="tab_content">
-        <p>I did my best to follow web-coding "best practices." (I put "best practices" in quotations, not because I don't want my structure, style and code to be among the best out there, but because it's my experiences that these best practices are motivated by decades-old workaround, and petty squabbles.)
-        <p>I did my best to keep the markup of this page sane, but it doesn't much use `article`, `section`, or other such specific tags. This kind of UI doesn't lend itself to index searches or Readability to begin with, so I figured a few extra `div` tags wouldn't hurt much.</p>
-        <p>I wanted to do as much of the coloring, positioning, and user-interaction of textural elements in CSS as I could; I'm somewhat proud of the results. The slider is (unfortunately) JQuery because of some `mouseup` resolution oddities, as is the animation of the fading text. The rest is pure CSS. The hovering, selecting and transitioning of the buttons and tabs were put together in Sass (scss, specifically, because I love me some supersets) and compiled to pure CSS.</p>
-        <p>The Canvas was heavily inspired by the excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library from Xueqiao Xu. It uses a <a href="raphaeljs.com">Raphael.js</a> canvas for rendering simple vector graphics and <a href="jquery.com">JQuery</a> for properly capturing user input. The rest is a rather simple MCV program hashed together in <a href="coffeescript.org">CoffeeScript</a>.<p>
-        <p>Because I'm incredibly lazy, I had to put together a <a title="Find this link!">Watchr</a> script to automate compiling both the CoffeeScript down to JavaScript, and the Sass down to CSS.</p>
+        <ul>
+          <li>To start, <a href="http://www.quackit.com/html_5/tags/">HTML5</a> and <a href="http://www.w3schools.com/cssref/default.asp">CSS3</a>.</li>
+          <li><a href="http://www.ecmascript.org/">JavaScript</a> and&mdash;with much greater pleasure&mdash;<a href="http://coffeescript.org/">CoffeeScript</a>. I found <a href="http://yuiblog.com/crockford/">Douglas Crockford's</a> video lectures a wonderful JavaScript resource, and <a href="http://arcturo.github.com/library/coffeescript/">The Little Book on CoffeeScript</a> a great place to start there.</li>
+          <li><a href="http://sass-lang.com/">Sass</a> because screw CSS. Seriously. Screw CSS.</li>
+          <li><a href="http://raphaeljs.com/">Raphael.js</a> for all the vector graphics that make up the Game of Life canvas.</li>
+          <li><a href="http://jquery.com/">JQuery</a> for... well, JQuery. <a href="http://jqueryui.com/">JQuery UI</a> for a few UI elements.</li>
+          <li><a href="https://github.com/mynyml/watchr">Watchr</a> for providing continuous compiling and minifying.</li>
+          <li>This is where I'll give props to the minifying hooplah.</li>
+          <li>Props to Xueqiao Xu(<a href="https://github.com/qiao/">qiao</a>) and his excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library for a great starting point and even more inspiration.</li>
       </div>
     </div>
+    <!--The actual tab side-bar. -->
     <ul class="tab_menu">
-      <li><a href="#tab_what">w<br />h<br />a<br />t</a></li>
-      <li><a href="#tab_why">w<br />h<br />y</a></li>
+      <li class="open"><a href="#tab_rules">r<br />u<br />l<br />e<br />s</a></li>
+      <li><a href="#tab_ctrls">c<br />t<br />r<br />l<br />s</a></li>
+      <!-- <li><a href="#tab_why">w<br />h<br />y</a></li> -->
       <li><a href="#tab_how">h<br />o<br />w</a></li>
     </ul>
   </div>
 
-  <!--The Control Pane. It's where all the cool buttons and sliders are. -->
+  <!--The Control Pane. -->
   <div id="control_pane" class="movable_pane content_pane">
     <p>Controls</p>
     <input type="checkbox" id="play" /><label for="play" id="play_label" class="jq_button">Play</label>
-    <label for="hz"><strong>Hz</strong></label><input type="text" id="hz" maxlength="2" size="1" value="8" />
+    <label for="hz">Hz</label><input type="text" id="hz" maxlength="2" size="1" value="8" />
     <br />
     <span id="hz_slider"></span>
     <br />
@@ -70,25 +81,6 @@
       <input type="button" id="step" value="Step" class="jq_button"/>
       <input type="button" id="reset" /value="Reset" class="jq_button"/>
     </span>
-  </div>
-
-  <!--TEMPORARY DEBUG PANE
-      As soon as the scripts are solid, this should go away. -->
-  <div id="debug_pane" class="movable_pane content_pane" oncontexmenu="return false">
-    Debug
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
-    <p><span></span></p>
   </div>
 
   <footer>
