Small UI tweaks. Comment cleanup.
Next step is to undo all that blue crap.

--- a/index.html
+++ b/index.html
@@ -44,22 +44,15 @@
         <p>The control pane to the right will allow you to play/pause the simulation, take a single step to the next generation, set the speed of the simulation, and completely reset the board.</p>
         <p>All visible panes are movable, and you can hide this help pane by clicking the <a>hide</a> anchor to the right of the title text.</p> 
       </div>
-      <!--The Why tab.
-      <div id="tab_why" class="tab_content">
-        <p>The short answer; my own edification.</p>
-        <p>I've had, for a long time, a cursory understanding of HTML, CSS, and JavaScript, but I've never been deeply acquainted with any of them, nor had I before worked with HTML5 and CSS3 and the 'best practices' that come along with them. I decided that should change.</P>
-        <p>I'm hopings this is a good enough website to be used as a resume piece, so if you notices anything odd, or have any suggestions, please contact me through the github link at the bottom of the page.</p>
-      </div> -->
       <!--The Credits tab. -->
       <div id="tab_how" class="tab_content">
         <ul>
           <li>To start, <a href="http://www.quackit.com/html_5/tags/">HTML5</a> and <a href="http://www.w3schools.com/cssref/default.asp">CSS3</a>.</li>
-          <li><a href="http://www.ecmascript.org/">JavaScript</a> and&mdash;with much more ease&mdash;<a href="http://coffeescript.org/">CoffeeScript</a>. <a href="http://yuiblog.com/crockford/">Douglas Crockford's</a> video lectures on JavaScript are a wonderful resource, and <a href="http://arcturo.github.com/library/coffeescript/">The Little Book on CoffeeScript</a> a great place to start there.</li>
+          <li><a href="http://www.ecmascript.org/">JavaScript</a> and&mdash;with much greater ease&mdash;<a href="http://coffeescript.org/">CoffeeScript</a>. <a href="http://yuiblog.com/crockford/">Douglas Crockford's</a> video lectures on JavaScript are a wonderful resource, and <a href="http://arcturo.github.com/library/coffeescript/">The Little Book on CoffeeScript</a> a great place to start there.</li>
           <li><a href="http://sass-lang.com/">Sass</a> because variables, and screw CSS. Seriously. Screw CSS.</li>
           <li><a href="http://raphaeljs.com/">Raphael.js</a> for all the vector graphics that make up the canvas.</li>
           <li><a href="http://jquery.com/">JQuery</a> for... well, JQuery. <a href="http://jqueryui.com/">JQuery UI</a> for a few UI elements.</li>
-          <li><a href="https://github.com/mynyml/watchr">Watchr</a> for providing continuous compiling and minifying.</li>
-          <li>This is where I'll give props to the minifying hooplah.</li>
+          <li><a href="https://github.com/mynyml/watchr">Watchr</a> for providing continuous compilation.</li>
           <li>Props to Xueqiao Xu(<a href="https://github.com/qiao/">qiao</a>) and his excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library for a great starting point. Seriously. Go check it out.</li>
       </div>
     </div>
