Shoring up the credits pane.

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <ul>
           <li>To start, <a href="http://www.quackit.com/html_5/tags/">HTML5</a> and <a href="http://www.w3schools.com/cssref/default.asp">CSS3</a>.</li>
           <li><a href="http://www.ecmascript.org/">JavaScript</a> and&mdash;with much greater ease&mdash;<a href="http://coffeescript.org/">CoffeeScript</a>. <a href="http://yuiblog.com/crockford/">Douglas Crockford's</a> video lectures on JavaScript are a wonderful resource, and <a href="http://arcturo.github.com/library/coffeescript/">The Little Book on CoffeeScript</a> a great place to start there.</li>
-          <li><a href="http://sass-lang.com/">Sass</a> because variables, and screw CSS. Seriously. Screw CSS.</li>
+          <li><a href="http://sass-lang.com/">Sass</a> because variables, and screw CSS. Seriously.<br />Screw CSS.</li>
           <li><a href="http://raphaeljs.com/">Raphael.js</a> for all the vector graphics that make up the canvas.</li>
-          <li><a href="http://jquery.com/">JQuery</a> for... well, JQuery. <a href="http://jqueryui.com/">JQuery UI</a> for a few UI elements.</li>
+          <li><a href="http://jquery.com/">JQuery</a> for... well, JQuery. <a href="http://jqueryui.com/">JQuery UI</a> for a few UI elements, and <a href="http://documentcloud.github.com/underscore/">Underscore.js</a> for a couple really awesome helper functions.</li> 
           <li><a href="https://github.com/mynyml/watchr">Watchr</a> for providing continuous compilation.</li>
-          <li>Props to Xueqiao Xu(<a href="https://github.com/qiao/">qiao</a>) and his excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library for a great starting point. Seriously. Go check it out.</li>
+          <li>Finally, props to Xueqiao Xu(<a href="https://github.com/qiao/">qiao</a>) and his excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library for a great starting point.<br />Go check it out. Seriously.</li>
       </div>
     </div>
     <!--The actual tab side-bar. -->
