Small changes a potential bugfix.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   </div>
 
   <footer>
+      Tested (only) on <a href="https://www.google.com/chrome">Google Chrome</a><br />
       Project Hosted on <a href="http://github.com/TheOnlyRew/myGame_of_Life">Github</a>
   </footer>
 
