Playing around with prefix-free.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./dev/css/reset.css" />
   <link rel="stylesheet" href="./dev/css/main.css" />
   <link rel="stylesheet" href="./dev/css/jquery-ui/jquery-ui-1.8.16.custom.css" />
+  <script src="./min/lib/prefixfree.min.js"></script>
 </head>
 
 <body>
